Adjusted overflow properties on body and html elements to show vertical scrollbar on smaller screen sizes. Replaced absolute position property for social media icons with float right to prevent two vertical scrollbars appearing

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,8 @@ body, html {
     margin: 0;
     font: 30px 'Clicker Script', cursive;
     color: darkred;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
 }
 
 div {
@@ -169,8 +170,7 @@ ul {
 }
 
 .social {
-    position: absolute;
-    right: 0;
+    float: right;
     margin-right: 30px;
     vertical-align: middle;
     line-height: 100px;
